partial code ready

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>React Webpack Scaffold</title>
-    <link href="/static/styles.css" rel="stylesheet" type="text/css" />
+	<title>Searcher</title>
+	<meta charset="UTF-8">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+	<meta name="mobile-web-app-capable" content="yes"/>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet"/>
+	<meta name="theme-color" content="#04aa85"/>
+	<meta name="msapplication-navbutton-color" content="#04aa85"/>
+	<meta name="apple-mobile-web-app-status-bar-style" content="#04aa85"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+	
+	<link href="/static/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div id="root"></div>
-    <script src="/static/bundle.js"></script>
+	<div id="root"></div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+	<script src="https://apis.google.com/js/api.js"></script>
+	<script src="/static/bundle.js"></script>
 </body>
 </html>
